# igrep

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  keymap.txt
.github/workflows/: ci.yml
HomebrewFormula/: igrep.rb
bucket/: igrep.json
src/: app.rs  args.rs  editor.rs  entries.rs  event.rs  file_entry.rs  grep_match.rs  ig.rs  input_handler.rs  lib.rs  main.rs  result_list.rs  searcher.rs
src/ig/: entries.rs  file_entry.rs  mod.rs  result_list.rs  search_config.rs  searcher.rs  sink.rs
src/ui/: app.rs  bottom_bar.rs  context_viewer.rs  editor.rs  input_handler.rs  keymap_popup.rs  mod.rs  result_list.rs  scroll_offset_list.rs  search_popup.rs  theme.rs
src/ui/theme/: dark.rs  light.rs  mod.rs
src/util/: mod.rs
