[package]
name = "igrep"
version = "1.2.0"
authors = ["Konrad Szymoniak <szymoniak.konrad@gmail.com>"]
license = "MIT"
description = "Interactive Grep"
homepage = "https://github.com/konradsz/igrep"
documentation = "https://github.com/konradsz/igrep"
repository = "https://github.com/konradsz/igrep"
keywords = ["cli", "tui", "grep"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "ig"
path = "src/main.rs"

[dependencies]
grep = "0.3.1"
ignore = "0.4.22"
clap = { version = "4.5.4", features = ["derive", "env"] }
crossterm = "0.27.0"
ratatui = { version = "0.26.2", default-features = false, features = [
  'crossterm',
] }
unicode-width = "0.1.12"
itertools = "0.13.0"
anyhow = "1.0.83"
strum = { version = "0.26.2", features = ["derive"] }
syntect = "5.2.0"

[dev-dependencies]
lazy_static = "1.4.0"
test-case = "3.3.1"
mockall = "0.12.1"

[build-dependencies]
anyhow = "1.0.83"
